network-policies/allow-api-call-sql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-call-sql
spec:
  podSelector:
    matchLabels:
      app: tour-of-heroes-sql
      role: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: tour-of-heroes-api
              role: backend
      ports:
        - protocol: TCP
          port: 1433
